<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:minWidth="300dp">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_popularity"
            android:text="@string/sort_by_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />
        <RadioButton android:id="@+id/radio_rating"
            android:text="@string/sort_by_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />
        <RadioButton android:id="@+id/radio_favorite"
            android:text="@string/my_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />
    </RadioGroup>
</LinearLayout>